WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47187
[Qt] Fix breakage in RVCT 2.2 compile
https://bugs.webkit.org/show_bug.cgi?id=47187
Summary
[Qt] Fix breakage in RVCT 2.2 compile
Keith Kyzivat
Reported
2010-10-05 09:43:07 PDT
RVCT 2.2 build results in errors resolving the namespace of some classes during the build process: "html/canvas/Int32Array.h", line 40: Error: #1001: class member designated by a using-declaration must be visible in a direct base class using TypedArrayBase<int>::set; ^ "html/canvas/Uint8Array.h", line 42: Error: #1001: class member designated by a using-declaration must be visible in a direct base class using TypedArrayBase<unsigned char>::set; ^ For RVCT2.2, the using clause is unneeded, and can be omitted. This bug is fully reproduceable 100% of the time. A Test case cannot be made for this since this is a build-related issue.
Attachments
RVCT 2.2 build output (cross compiled from linux) showing error message.
(1.04 MB, application/octet-stream)
2010-10-05 09:44 PDT
,
Keith Kyzivat
no flags
Details
Patch
(2.22 KB, patch)
2010-10-05 10:07 PDT
,
Keith Kyzivat
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Kyzivat
Comment 1
2010-10-05 09:44:01 PDT
Created
attachment 69798
[details]
RVCT 2.2 build output (cross compiled from linux) showing error message.
Keith Kyzivat
Comment 2
2010-10-05 10:07:20 PDT
Created
attachment 69801
[details]
Patch
Simon Hausmann
Comment 3
2010-10-05 10:15:02 PDT
Committed
r69122
: <
http://trac.webkit.org/changeset/69122
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug