[Qt] Fix breakage in RVCT 2.2 compile https://bugs.webkit.org/show_bug.cgi?id=47187

Patch by Keith Kyzivat <keith.kyzivat@nokia.com> on 2010-10-05
Reviewed by Simon Hausmann.

Fix bug in RVCT 2.2 compile for Symbian^3 in html/canvas/Int32Array.h and
html/canvas/Uin8Array.h
For RVCT2.2, the using clause is unneeded, and can be omitted.

A Test case cannot be made for this since this is a build-related issue.

* html/canvas/Int32Array.h:
* html/canvas/Uint8Array.h:

Canonical link: https://commits.webkit.org/59729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69122 268f45cc-cd09-0410-ab3c-d52691b4dbfc